# AM-DEM

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
TPLs/TPL_build_scripts/: fmt_build_notests.sh  kokkos_build_clang11_omp_O3.sh  kokkos_build_clang11_omp_debug.sh  kokkos_build_clang11_omp_tests.sh  leanvtk_build.sh
TPLs/kokkos_build_scripts/: kokkos_build_clang11_omp_tests.sh
host-configs/: macos_10_13_x86_64_clang11_O3.cmake  macos_10_13_x86_64_clang11_debug.cmake
original_code/: PowderDeposition.f90  PowderDepositionKhairallah.f90  PowderDepositionOMP.f90  PowderDepositionShankarMP.f90  SLMFastOMP.f90  SLMShankarFastMP.f90  makefile
src/: CMakeLists.txt  RDistributions.f90  SphereToCircle.f90  amdem_main.cpp  bins.cpp  bins.hpp  deposit_powder.cpp  deposit_powder.hpp  global_settings.cpp  global_settings.hpp  io_utils.cpp  io_utils.hpp  particles.cpp  particles.hpp  powder_deposition_main.cpp  terminate.cpp  terminate.hpp  utilities.hpp
tests/: CMakeLists.txt  test_bins.cpp  test_particles.cpp  test_time_steps.cpp  test_utilities.cpp
